# vibe-radar

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: sources.example.yaml
migrations/: 001_init.sql  002_multisource.sql  003_extraction_state.sql
scripts/: run_all.py  run_cluster.py  run_extract.py  run_hn.py  run_status.py  run_subreddit.py  run_subreddit_praw.py
src/analysis/: __init__.py  claude_cli.py  cluster.py  extract.py  regex_pass.py  score.py
src/common/: documents.py
src/hn_collector/: __init__.py  client.py  ingest.py
src/reddit_collector/: __init__.py  client.py  config.py  ingestion.py  normalize.py  oauth.py  storage.py
src/vibe_radar/: __init__.py  cli.py
src/vibe_radar/commands/: __init__.py  cluster.py  collect.py  extract.py  status.py
tests/: test_analysis.py  test_claude_cli.py  test_cluster.py  test_normalize.py
